# gis-postgis-demo

./: README.md  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
backend/: pyproject.toml
frontend/app/: package-lock.json  package.json  test.js
frontend/app/src/: index.js
frontend/app/src/components/: detail.js  map.js  search.js
